refactor : nio를 사용하지 않고, InputStream에서 제공하는 readAllBytes로 변경